welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: ')' expected but 'else' found.
    } else return a
      ^max1020:5: error: ';' expected but 'else' found.
  } else return 0
    ^max1020:7: error: Unmatched closing brace '}' ignored here
 }
 ^